// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Panel Default 1`] = `
<div
  className="storybook-container"
>
  <button
    className="borrow-ui__button  borrow-ui__button--primary borrow-ui__button--normal borrow-ui__button--shadowed borrow-ui__button--separated "
    onClick={[Function]}
  >
    <span>
      Open Panel
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Panel Title and footer 1`] = `
<div
  className="storybook-container"
>
  <button
    className="borrow-ui__button  borrow-ui__button--accent borrow-ui__button--normal borrow-ui__button--shadowed borrow-ui__button--separated "
    onClick={[Function]}
  >
    <span>
      Open Panel
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Panel Widths 1`] = `
<div
  className="storybook-container"
>
  <button
    className="borrow-ui__button  borrow-ui__button--regular borrow-ui__button--normal borrow-ui__button--shadowed borrow-ui__button--separated "
    onClick={[Function]}
  >
    <span>
      Open Panel (400px - 300px)
    </span>
  </button>
  <button
    className="borrow-ui__button  borrow-ui__button--regular-reverse borrow-ui__button--normal borrow-ui__button--shadowed borrow-ui__button--separated "
    onClick={[Function]}
  >
    <span>
      Open Panel (75% - 300px)
    </span>
  </button>
  <button
    className="borrow-ui__button  borrow-ui__button--regular borrow-ui__button--normal borrow-ui__button--shadowed borrow-ui__button--separated "
    onClick={[Function]}
  >
    <span>
      Open Panel (75% - auto)
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Panel onOpen hook 1`] = `
<div
  className="storybook-container"
>
  <button
    className="borrow-ui__button   borrow-ui__button--normal borrow-ui__button--shadowed borrow-ui__button--separated "
    onClick={[Function]}
  >
    <span>
      Open Panel
    </span>
  </button>
</div>
`;
